  * Update imported translations from gtk+2.0 2.16.1-0ubuntu3.
  * Automatic update of included source packages: apt-setup 1:0.40ubuntu1,
    base-installer 1.99ubuntu1, choose-mirror 2.28ubuntu2, console-setup
    1.34ubuntu1, debian-installer-utils 1.67ubuntu1, grub-installer
    1.37ubuntu1, localechooser 2.11ubuntu1, partman-auto 85ubuntu1,
    partman-newworld 21, partman-target 59ubuntu1.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 24 Apr 2009 13:36:27 +0100

ubiquity (1.12.12) jaunty; urgency=low

  * Set the window manager type hint to dialog for
    debconf_progress_window to prevent it from being hidden behind the
    fullscreen ubiquity window when in only-ubiquity mode (LP: #361112).
  * Automatic update of included source packages: base-installer
    1.98ubuntu7.

 -- Evan Dandrea <evand@ubuntu.com>  Sat, 18 Apr 2009 11:24:33 +0100

ubiquity (1.12.11) jaunty; urgency=low

  * Properly filter out partitions that are going to be formatted from
    migration-assistant again after changes to partman broke the code
    (LP: #349334).
  * Automatic update of included source packages: partman-auto
    84ubuntu4.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 17 Apr 2009 12:15:20 +0100

ubiquity (1.12.10) jaunty; urgency=low

  [ Evan Dandrea ]
  * Fix a crash when in OEM mode.  Child widgets are members of the
    self.userinterface list (LP: #361668).
  * Add support for displaying the "Use the largest continuous free space"
    option in the partition bars.  Previously ubiquity would create a single
    Ubuntu partition that filled the entire drive when this option was
    selected (LP: #289663).
  * Pack the SegmentedBar widgets in GtkFrames rather than GtkEventBoxes
    to work around repainting issues (LP: #362334).
  * Automatic update of included source packages: flash-kernel
    2.13ubuntu7, user-setup 1.23ubuntu20.

  [ Colin Watson ]
  * Fix stripping of '=dev=' from device names when creating partition bars